AutomationTest -- Using CI/CD pipeline Demo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 version: '3'
-#The selienium test build 
 
 services:
   automation:
@@ -11,23 +10,22 @@ services:
     environment:
       - SELENIUM_HUB_HOST=selenium-hub
       - SELENIUM_HUB_PORT=4444
-      - SELENIUM_BROWSER=chrome
+      - ENV=dev
+      - LOG_LEVEL=info
+      - REPORT_PATH=/app/test_results/report.xml
     entrypoint: /app/entrypoint.sh
     volumes:
       - ./src:/app/src
       - ./testing.xml:/app/testing.xml
+      - ./test_results:/app/test_results
     networks:
       - automation
-
-#This is hub setup . The enviroment set to maximum to scale.
 
   selenium-hub:
     image: selenium/hub:latest
     container_name: selenium-hub
     ports:
       - "4444:4444"
-      - "4442:4442"
-      - "4443:4443"
     environment:
       - GRID_MAX_SESSION=200
       - GRID_BROWSER_TIMEOUT=180000
@@ -35,11 +33,10 @@ services:
       - GRID_CLEAN_UP_CYCLE=2000
       - GRID_NEW_SESSION_WAIT_TIMEOUT=90000
       - GRID_JVM_OPTS=-Xmx2048m
-      
+
     networks:
       automation:
 
-  #This is chrome image for selenium hub.
   chrome:
     image: selenium/node-chrome:latest
     depends_on:
@@ -50,8 +47,7 @@ services:
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
     networks:
       automation:
-    
-  #This is firebox image for selenium hub.
+
   firefox:
     image: selenium/node-firefox:latest
     depends_on:
@@ -62,7 +58,7 @@ services:
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
     networks:
       automation:
-  #This is edge image for selenium hub.
+
   edge:
     image: selenium/node-edge:latest
     depends_on:
@@ -74,20 +70,32 @@ services:
     networks:
       automation:
 
-  #This is vnc image for selenium hub.VNC is a remote dekstop viewer.
   vnc-chrome:
-    image: consol/ubuntu-xfce-vnc
+    build:
+      context: ./
+      dockerfile: VNC-chrom-Dockerfile
     ports:
       - "5901:5900"
     depends_on:
       - chrome
     environment:
+      - VNCSERVER_REMOVE_PW=1
       - VNC_COL_DEPTH=24
-      - VNC_RESOLUTION=1280x720
-      - VNC_PW=nitesh
+      - VNC_RESOLUTION=1920x1080x24
     networks:
       automation:
-  #Image for nginx using is as a reverse proxy.
+
+  chrome_video:
+    image: selenium/video:ffmpeg-4.3.1-20230421
+    volumes:
+      - /tmp/videos:/videos
+    depends_on:
+      - chrome
+    environment:
+      - DISPLAY_CONTAINER_NAME=chrome
+      - FILE_NAME=chrome_video.mp4
+    networks:
+      automation:
   nginx:
     image: nginx
     ports:
@@ -96,11 +104,9 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - automation
-     
     networks:
-    - automation
+      - automation
 
-  #This is for logging files . Uing prometheus.
   prometheus:
     image: prom/prometheus
     container_name: prometheus
@@ -110,7 +116,6 @@ services:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     networks:
       - automation
-
 
 networks:
   automation:
