--- a/nginx.conf
+++ b/nginx.conf
@@ -1,40 +1,47 @@
-user  nginx;
-worker_processes  1;
+user nginx;
+worker_processes 1;
 
 events {
-    worker_connections  1024;
-} 
-     
+    worker_connections 1024;
+}
+
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
+    include mime.types;
+    default_type application/octet-stream;
 
-    sendfile        on;
+    sendfile on;
 
-    keepalive_timeout  65;
+    keepalive_timeout 65;
+
+    upstream selenium {
+        # Add the IP addresses and port numbers of your Selenium nodes here
+        server 192.0.2.1:4444;
+        server 192.0.2.2:4444;
+        server 192.0.2.3:4444;
+    }
 
     server {
-        listen       80;
-        server_name  localhost;
+        listen 80;
+        server_name localhost;
 
         location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
+            root /usr/share/nginx/html;
+            index index.html index.htm;
         }
 
         location /grid/console {
-            proxy_pass http://selenium-hub:4444/grid/console/;
+            proxy_pass http://selenium;
             proxy_redirect off;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
         }
-        
+
         # Reverse proxy configuration for /wd/hub endpoint
         location /wd/hub {
-            # Set the proxy pass to the Selenium Hub URL
-            proxy_pass http://selenium-hub:4444/wd/hub/;
+            # Set the proxy pass to the Selenium upstream
+            proxy_pass http://selenium;
             # Turn off the proxy buffering to avoid buffering responses
             proxy_buffering off;
             # Configure the proxy to use HTTP/1.1 protocol
@@ -47,6 +54,32 @@ http {
             # Configure the proxy to keep the original client IP address
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+        #Optimize network settings for faster VNC connections
+        location /vnc {
+            #Optimize network settings for faster VNC connections
+            proxy_pass http://vnc-chrome:5901/websockify/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            # Disable Nagle's algorithm
+            tcp_nodelay on;
+            # Disable the TCP buffering
+            tcp_nopush on;
+            # Increase the buffer size for better network performance
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+            proxy_busy_buffers_size 256k;
+            # Increase the timeout for the VNC connection
+            proxy_read_timeout 86400;
+            proxy_send_timeout 86400;
+            proxy_buffering off;
+
+            keepalive_requests 1000000;
+            keepalive_timeout 3600s;
+            send_timeout 86400;
+            client_max_body_size 0;
         }
     }
 }
