--- a/nginx.conf
+++ b/nginx.conf
@@ -13,8 +13,29 @@ http {
 
     keepalive_timeout 65;
 
+    # Add caching configuration for VNC
+    proxy_cache_path /var/cache/nginx/vnc levels=1:2 keys_zone=vnc_cache:10m inactive=60m;
+    proxy_cache_key "$scheme$request_method$host$request_uri";
+    proxy_cache_valid 200 60m;
+    proxy_cache_valid 404 1m;
+    proxy_cache_bypass $http_pragma;
+    proxy_cache_revalidate on;
+    proxy_cache_lock on;
+    proxy_cache_min_uses 1;
+
+    # Add caching configuration for Automation
+    proxy_cache_path /var/cache/nginx/automation levels=1:2 keys_zone=automation_cache:10m inactive=60m;
+    proxy_cache_key "$scheme$request_method$host$request_uri";
+    proxy_cache_valid 200 60m;
+    proxy_cache_valid 404 1m;
+    proxy_cache_bypass $http_pragma;
+    proxy_cache_revalidate on;
+    proxy_cache_lock on;
+    proxy_cache_min_uses 1;
+
     upstream selenium {
         # Add the IP addresses and port numbers of your Selenium nodes here
+        server localhost:4444
         server 192.0.2.1:4444;
         server 192.0.2.2:4444;
         server 192.0.2.3:4444;
@@ -54,32 +75,31 @@ http {
             # Configure the proxy to keep the original client IP address
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            # Add caching directives
+            proxy_cache automation_cache;
         }
-        #Optimize network settings for faster VNC connections
-        location /vnc {
-            #Optimize network settings for faster VNC connections
-            proxy_pass http://vnc-chrome:5901/websockify/;
+
+        # Reverse proxy configuration for automation endpoint
+        location /automation {
+            # Set the proxy pass to the Automation service
+            proxy_pass http://automation:8080;
+            # Turn off the proxy buffering to avoid buffering responses
+            proxy_buffering off;
+            # Configure the proxy to use HTTP/1.1 protocol
             proxy_http_version 1.1;
+            # Configure the proxy to upgrade connections to keep them open
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
+            # Set the Host header to the upstream server's hostname
             proxy_set_header Host $host;
-            # Disable Nagle's algorithm
-            tcp_nodelay on;
-            # Disable the TCP buffering
-            tcp_nopush on;
-            # Increase the buffer size for better network performance
-            proxy_buffer_size 128k;
-            proxy_buffers 4 256k;
-            proxy_busy_buffers_size 256k;
-            # Increase the timeout for the VNC connection
-            proxy_read_timeout 86400;
-            proxy_send_timeout 86400;
-            proxy_buffering off;
+            # Configure the proxy to keep the original client IP address
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-            keepalive_requests 1000000;
-            keepalive_timeout 3600s;
-            send_timeout 86400;
-            client_max_body_size 0;
+            # Add caching directives
+            proxy_cache automation_cache;
+            proxy_cache_valid 200 60m;
+            proxy_cache_valid 404 1m;
         }
     }
 }
