--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -2,7 +2,8 @@ name: Deploy to Remote Server
 
 on:
   push:
-    branches: [master]
+    branches: 
+    - '*'
 
 jobs:
   deploy:
@@ -44,6 +45,8 @@ jobs:
             ssh -o StrictHostKeyChecking=no -i ${{env.LOCATION}} ${{ env.ASERVER_HOST }} << EOF
               mkdir automationBenekiva
               cd automationBenekiva
+
               docker-compose build
+              docker network create automation        
               # docker-compose up
             EOF
