Testing Pipeline-- Second dump

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -48,14 +48,14 @@ jobs:
       # Copy the Docker Compose file from jump server to remote server
       - name: Copy Docker Compose file to Remote server
         run: |
-          scp -o "StrictHostKeyChecking=no" -o "ProxyJump=${{ secrets.USER }}@${{ secrets.HOST }}" -i nitesh.pem /docker-compose.yml @${{ secrets.AHOST }}:/
+          scp -o "StrictHostKeyChecking=no" -o "ProxyJump=niteshp@jump.benekiva.io" -i niteshp.pem /docker-compose.yml @ubuntu@aedev.benekiva.io:/
 
 
       # SSH into remote server to deploy
       - name: Deploy using SSH
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.AHOST }}
+          host: ubuntu@aedev.benekiva.io
           key: ${{ secrets.AKEY }}
 
           script: |
