Testing Pipeline-- Second dump

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -42,13 +42,13 @@ jobs:
           port: 2020
 
           script: |
-            touch new.txt
+            scp -o "StrictHostKeyChecking=no" -o "ProxyJump=niteshp@jump.benekiva.io" -i ~/.ssh/niteshp.pem /docker-compose.yml @ubuntu@aedev.benekiva.io:/
 
       
-      # Copy the Docker Compose file from jump server to remote server
-      - name: Copy Docker Compose file to Remote server
-        run: |
-          scp -o "StrictHostKeyChecking=no" -o "ProxyJump=niteshp@jump.benekiva.io" -i ~/.ssh/niteshp.pem /docker-compose.yml @ubuntu@aedev.benekiva.io:/
+      # # Copy the Docker Compose file from jump server to remote server
+      # - name: Copy Docker Compose file to Remote server
+      #   run: |
+        
 
 
       # SSH into remote server to deploy
