--- a/nginx.conf
+++ b/nginx.conf
@@ -99,7 +99,7 @@ http {
             # Add caching directives
             proxy_cache automation_cache;
             proxy_cache_valid 200 60m;
-            proxy_cache_valid 404 1m;
+            # proxy_cache_valid 404 1m;
         }
     }
 }
