--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -36,11 +36,13 @@ jobs:
 
       # Copy the Docker Compose file from jump server to remote server
       - name: Copy Docker Compose file to Remote server
-        
-        run: |
-          scp -o "StrictHostKeyChecking=no" -o "ProxyJump=niteshp@jump.benekiva.io" -i ${{ secrets.KEY }} /docker-compose.yml ubuntu@aedev.benekiva.io:/
         env:
            SSH_KEY: ${{ secrets.KEY }}
+        
+        run: |
+           scp -o "StrictHostKeyChecking=no" -o "ProxyJump=niteshp@jump.benekiva.io" -i "$SSH_KEY" /docker-compose.yml ubuntu@aedev.benekiva.io:/
+
+      
       # SSH into remote server to deploy
       - name: Deploy using SSH
         uses: appleboy/ssh-action@master
