--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,9 +17,9 @@ jobs:
         uses: actions/checkout@v2
 
       # Build the Docker Compose file
-      - name: Build Docker Compose
-        run: |
-          docker-compose build
+      # - name: Build Docker Compose
+      #   run: |
+      #     docker-compose build
 
       # Copy the Docker Compose file to server1
       - name: Copy Docker Compose file
@@ -40,6 +40,7 @@ jobs:
        
         
         run: |
+         echo "SSH key: $SSH_KEY"
            scp -o "StrictHostKeyChecking=no" -o "ProxyJump=niteshp@jump.benekiva.io" -i "$SSH_KEY" /docker-compose.yml ubuntu@aedev.benekiva.io:/
 
       
