--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -39,8 +39,8 @@ jobs:
        
         
         run: |
-         echo "SSH key: $SSH_KEY"
-           scp -o "StrictHostKeyChecking=no" -o "ProxyJump=niteshp@jump.benekiva.io" -i ${{vars.PEM_KEY}} /docker-compose.yml ubuntu@aedev.benekiva.io:/
+          echo "${{vars.PEM_KEY}}"
+          scp -o "StrictHostKeyChecking=no" -o "ProxyJump=niteshp@jump.benekiva.io" -i ${{vars.PEM_KEY}} /docker-compose.yml ubuntu@aedev.benekiva.io:/
 
        
       # SSH into remote server to deploy
