--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -9,7 +9,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     environment: Server Access
-
+    env:
+      PEM_KEY: ${{ vars.PEM_KEY }}
     steps:
       # Checkout the source code
       - name: Checkout
@@ -26,7 +27,7 @@ jobs:
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
-          key: ${{ vars.PEM_KEY }}
+          key: "$PEM_KEY"
           port: 2020
 
           source: ./docker-compose.yml
@@ -39,10 +40,9 @@ jobs:
        
         
         run: |
-          echo "${{vars.PEM_KEY}}"
-          scp -o "StrictHostKeyChecking=no" -o "ProxyJump=niteshp@jump.benekiva.io" -i ${{vars.PEM_KEY}} /docker-compose.yml ubuntu@aedev.benekiva.io:/
+           scp -o "StrictHostKeyChecking=no" -o "ProxyJump=niteshp@jump.benekiva.io" -i "$SSH_KEY" /docker-compose.yml ubuntu@aedev.benekiva.io:/
 
-       
+      
       # SSH into remote server to deploy
       - name: Deploy using SSH
         uses: appleboy/ssh-action@master
