--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -40,7 +40,7 @@ jobs:
        
         
         run: |
-           scp -o "StrictHostKeyChecking=no" -o "ProxyJump=niteshp@jump.benekiva.io" -i "$SSH_KEY" /docker-compose.yml ubuntu@aedev.benekiva.io:/
+           scp -o "StrictHostKeyChecking=no" -o "ProxyJump=niteshp@jump.benekiva.io" -i ${{vars.PEM_KEY}} /docker-compose.yml ubuntu@aedev.benekiva.io:/
 
       
       # SSH into remote server to deploy
