--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -41,8 +41,10 @@ jobs:
         
         run: |
           echo "${{ vars.PEM_KEY }}" > pem_key.pem
-          ssh -o StrictHostKeyChecking=no -o ProxyJump=niteshp@jump.benekiva.io -i pem_key.pem ubuntu@aedev.benekiva.io "echo 'SSH connection established'; sleep 10" &
-          scp -o StrictHostKeyChecking=no -o ProxyJump=niteshp@jump.benekiva.io -o ControlPath=~/.ssh/control-socket -i pem_key.pem /docker-compose.yml ubuntu@aedev.benekiva.io:/
+          ssh -o StrictHostKeyChecking=no -o ProxyJump=niteshp@jump.benekiva.io -i pem_key.pem -p 2020 ubuntu@aedev.benekiva.io "echo 'SSH connection established'; sleep 10" &
+
+          scp -o StrictHostKeyChecking=no -o ProxyJump=niteshp@jump.benekiva.io -o ControlPath=~/.ssh/control-socket -i pem_key.pem -P 2020 /docker-compose.yml ubuntu@aedev.benekiva.io:/
+
 
       
       # SSH into remote server to deploy
